--- a/a.css
+++ b/a.css
@@ -4,7 +4,7 @@ height: 100%;
 
 .background{
 background-size: cover;
-background-image: url("bkgd.webp");
+background-image: url("https://t.mwm.moe/fj/");
 background-repeat: no-repeat;
 background-position: center;
 background-attachment: fixed;
