--- a/load.css
+++ b/load.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-image: url('https://t.mwm.moe/fj/');
+    background-image: url('https://www.loliapi.com/acg/');
     background-size: cover;
     background-position: center;
     display: flex;
@@ -27,20 +27,54 @@ body {
     grid-template-columns: repeat(2, 1fr);
     gap: 20px;
     margin-left: 100px;
-    backdrop-filter: blur(5px);
-    background-color: rgba(0,0,0,0.30);
+    backdrop-filter: blur(3px);
+    background-color: rgba(0,0,0,0.15);
     border-radius: 17px;
-    
-    
+    border: 50px;
+    box-shadow: 0 0 15px 10px rgba(0,0,0,0.15);
 }
 
 .product {
     text-align: center;
+    margin-left: 20px;
     color: white;
+    transition: transform 0.3s ease; /* 添加过渡效果 */
+    transition: background-color 0.3s ease; /* 添加过渡效果 */
+    transition: transform 0.3s ease; /* 添加过渡效果 */
+    border-radius: 17px;
 }
 
 .product img {
     width: 80px;
     height: 80px;
     margin-bottom: 10px;
+    margin-top: 20px;
+}
+.product:hover {
+    transform: scale(1.1);
+    background-color: rgba(0,0,0,0.30);
+    box-shadow: 0 0 15px 10px rgba(0,0,0,0.30);
+}
+@media screen and (orientation: portrait) {
+    .products {
+        display: flex;
+        flex-direction: column; /* 竖直排列产品 */
+        align-items: center; /* 居中产品元素 */
+    }
+    .product img {
+        width: 50px;
+        height: 50px;
+        margin-bottom: 10px;
+    }
+    .profile {
+        margin-left: 30px;
+    }
+    .products {
+        margin-left: 40px;
+        margin-right: 60px;
+    }
+    .product {
+        margin-left: 5px;
+        margin-right: 5px;
+    }
 }
