优化竖屏显示
调整竖屏时功能卡片右边距

--- a/load.css
+++ b/load.css
@@ -71,7 +71,7 @@ body {
     }
     .products {
         margin-left: 40px;
-        margin-right: 60px;
+        margin-right: 2%;
     }
     .product {
         margin-left: 5px;
