优化苹果端显示
修复苹果端浏览器无法显示模糊的问题

--- a/load.css
+++ b/load.css
@@ -28,6 +28,7 @@ body {
     gap: 20px;
     margin-left: 100px;
     backdrop-filter: blur(3px);
+    -webkit-backdrop-filter: blur(3px);
     background-color: rgba(0,0,0,0.15);
     border-radius: 17px;
     border: 50px;
