--- a/load.css
+++ b/load.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-image: url('https://www.loliapi.com/acg/');
+    background-image: url('https://t.mwm.moe/ycy');
     background-size: cover;
     background-position: center;
     display: flex;
